--- a/apendice2.tex
+++ b/apendice2.tex
@@ -64,3 +64,20 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccRF
 % \end{landscape}\clearpage}
+
+\subsection{VFDT}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaVFDTRedux
+\end{landscape}\clearpage}
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccVFDT
+% % \end{landscape}\clearpage}
+
+\subsection{SVM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaSVMRedux
+\end{landscape}\clearpage}
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccSVM
+% % \end{landscape}\clearpage}
+
