--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1581,3 +1581,110 @@ keywords = "Meta-learning systems "
   pages =       "1352--1357",
   \URL =         "http://dx.doi.org/10.1109/TNN.2009.2024147",
 }
+
+@book{neter1996applied,
+  title={Applied linear statistical models},
+  author={Neter, John and Kutner, Michael H and Nachtsheim, Christopher J and Wasserman, William},
+  volume={4},
+  year={1996},
+  publisher={Irwin Chicago}
+}
+
+@book{legendre1805nouvelles,
+  title={Nouvelles m{\'e}thodes pour la d{\'e}termination des orbites des cometes},
+  author={Legendre, Adrien Marie},
+  number={1},
+  year={1805},
+  publisher={F. Didot}
+}
+
+@InProceedings{prud2011,
+  title =       "Meta-learning to optimize the number of hidden nodes of MLP networks trained by Extreme Learning Machine algorithm",
+  author =      "Lucas, T., Prudêncio, R. B. C., Ludermir, T. B., and Soares, C.",
+  bibdate =     "",
+  booktitle =   "CBIC2011",
+  booktitle =   "Proceedings of the X Congresso Brasileiro de Intelig{ê}ncia Computacional",
+  publisher =   "",
+  year =        "2011",
+  editor =      "",
+  ISBN =        "",
+  pages =       "",
+}
+
+@article{parviainen2011studies,
+  title={Studies on dimension reduction and feature spaces},
+  author={Parviainen, Eli and others},
+  year={2011},
+  publisher={Aalto University}
+}
+
+@inproceedings{huang2004extreme,
+  title={Extreme learning machine: a new learning scheme of feedforward neural networks},
+  author={Huang, Guang-Bin and Zhu, Qin-Yu and Siew, Chee-Kheong},
+  booktitle={Neural Networks, 2004. Proceedings. 2004 IEEE International Joint Conference on},
+  volume={2},
+  pages={985--990},
+  year={2004},
+  organization={IEEE}
+}
+
+@techreport{rosenblatt1961principles,
+  title={Principles of neurodynamics. perceptrons and the theory of brain mechanisms},
+  author={Rosenblatt, Frank},
+  year={1961},
+  institution={DTIC Document}
+}
+
+@Article{journals/tnn/HuangB98,
+  title =       "Upper bounds on the number of hidden neurons in
+                 feedforward networks with arbitrary bounded nonlinear
+                 activation functions",
+  author =      "Guang-Bin Huang and Haroon A. Babri",
+  journal =     "IEEE Transactions on Neural Networks",
+  year =        "1998",
+  number =      "1",
+  volume =      "9",
+  bibdate =     "2008-02-15",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/tnn/tnn9.html#HuangB98",
+  pages =       "224--229",
+  URL =         "http://doi.ieeecomputersociety.org/10.1109/72.655045",
+}
+
+@article{sheela2013review,
+  title={Review on methods to fix number of hidden neurons in neural networks},
+  author={Sheela, K Gnana and Deepa, SN},
+  journal={Mathematical Problems in Engineering},
+  volume={2013},
+  year={2013},
+  publisher={Hindawi Publishing Corporation}
+}
+
+@Article{journals/ijon/YuHMNHSL14,
+  title =       "Ensemble delta test-extreme learning machine
+                 ({DT}-{ELM}) for regression",
+  author =      "Qi Yu and Mark van Heeswijk and Yoan Miche and Rui
+                 Nian and Bo He and Eric S{\'e}verin and Amaury
+                 Lendasse",
+  journal =     "Neurocomputing",
+  year =        "2014",
+  volume =      "129",
+  bibdate =     "2014-03-06",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ijon/ijon129.html#YuHMNHSL14",
+  pages =       "153--158",
+  URL =         "http://dx.doi.org/10.1016/j.neucom.2013.08.041",
+}
+
+@Article{journals/jmlr/CawleyT10,
+  title =       "On Over-fitting in Model Selection and Subsequent
+                 Selection Bias in Performance Evaluation",
+  author =      "Gavin C. Cawley and Nicola L. C. Talbot",
+  journal =     "Journal of Machine Learning Research",
+  year =        "2010",
+  volume =      "11",
+  bibdate =     "2011-04-01",
+  bibsource =   "DBLP, http://dblp.uni-trier.de/db/journals/jmlr/jmlr11.html#CawleyT10",
+  pages =       "2079--2107",
+  \URL =         "http://portal.acm.org/citation.cfm?id=1859921",
+}
