--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -155,6 +155,8 @@ A vantagem de uma dada estratégia em relação a outra que use o mesmo aprendiz
 pode chegar a se inverter, como é o caso de EERacu e Clu com os algoritmos
 CIELM e 5NN.
 
+% o 5-nn foi mal com o SGmulti porque o classificador só consegue expandir os verdadeiros labels para os 5 vizinhos mais próximos. Assim, a área de desacordo abrange praticamente todos os exemplos não rotulados.
+
 \ano{vfdt:ags e aleas}
 
 \ano{SVM:EERs e mahalas}
