--- a/introducao.tex
+++ b/introducao.tex
@@ -105,6 +105,12 @@ Figura \ref{compet}.
 \end{center}
 \end{figure}
 
+% challenge:
+% global_score = (ALC-Arand)/(Amax-Arand)       Amax = 1
+% semi-supervised learning is needed to achieve good performance in the first part of the learning curve
+% (usar ou não semisupervised é um problema à parte, que faz parter do learner, não da estratégia; classificadores semisupervisionados são melhores, mas não é isso que se está avaliando quando se comparam estratégias; ensembles, feature selection e SMOTE também ajudam e nem por isso precisam ser empregados na comparação de estratégias)
+
+
 Em consonância com esse panorama,
 está a ausência de estudos comparativos
 abrangentes que possam guiar o especialista na fase de amostragem.
