--- a/notacao.tex
+++ b/notacao.tex
@@ -51,7 +51,7 @@ $\bm{a} = \mathbb{R}$ e $b=3.7$.
 O tipo de atributo é dado pela função $\nom:A\rightarrow\{0,1\}$ que retorna $1$ para
 atributos nominais e $0$ para atributos numéricos.
 
-
+\ano{definir passivo = todos os exemplos <> aleatório}
 
 Dado um exemplo $\bm{x}$ e supondo que o modelo $\theta$ permita
 estimação da probabilidade de $\bm{x}$ ter a classe $\bm{y}$,
