--- a/stratsALCKappaFriedVFDTRedux.tex
+++ b/stratsALCKappaFriedVFDTRedux.tex
@@ -1,21 +1,28 @@
 \begin{table}[h]
 \caption{Um contra um (VFDT). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14\\
-1 - Rnd  	& - &   & * & . &   &   &   &   & * &   &   &   &   &   \\
-2 - Clu  	&   & - & * & * &   &   & . &   & * &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   &   &   &   &   &   &   &   &   \\
-4 - EERent	&   &   &   & - &   &   &   &   &   &   &   &   &   &   \\ \hline
-5 - EERacu	&   &   &   &   & - &   &   &   &   &   &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   & * & * & + & - & * &   & * &   &   &   &   &   \\ \hline
-7 - TUman	&   &   &   &   &   &   & - &   &   &   &   &   &   &   \\
-8 - \textbf{ATUman}	& * & + & * & * & * &   & * & - & * &   &   & * &   & * \\ \hline
-9 - TUmah	&   &   &   &   &   &   &   &   & - &   &   &   &   &   \\
-10 - \textbf{ATUmah}	&   &   & * & * & + &   & * &   & * & - &   &   &   &   \\ \hline
-11 - \textbf{GATU0man}	&   &   & * & * & * &   & * &   & * &   & - &   &   &   \\
-12 - \textbf{GATU0mah}	&   &   & + & . &   &   &   &   & * &   &   & - &   &   \\ \hline
-13 - \textbf{GATUman}	&   &   & * & * & * &   & * &   & * &   &   &   & - &   \\
-14 - \textbf{GATUmah}	&   &   & + &   &   &   &   &   & * &   &   &   &   & - \\ \hline\end{tabular}}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21\\
+1 - Rnd  	& - &   &   &   &   & + &   & * &   &   &   &   &   & . &   &   &   & * & * & * & * \\
+2 - Clu  	&   & - &   &   &   & * & . & * &   &   &   &   &   & + &   &   &   & * & * & * & * \\ \hline
+3 - \textbf{ATUeuc}	&   &   & - &   &   & * & * & * & * & * &   & * & * & * & + &   & * & * & * & * & * \\
+4 - \textbf{ATUman}	&   &   &   & - &   & * & * & * & * & * &   & * & * & * & * &   & * & * & * & * & * \\ \hline
+5 - \textbf{ATUmah}	&   &   &   &   & - & * & + & * & + &   &   &   & . & * &   &   & + & * & * & * & * \\
+6 - Ent  	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   &   & * & * & * & * \\ \hline
+7 - Mar  	&   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   &   & * & * & * & * \\
+8 - DWeuc	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   &   & * & * & * & * \\ \hline
+9 - TUeuc	&   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   &   & * & * & * & * \\
+10 - TUman	&   &   &   &   &   &   &   &   &   & - &   &   &   &   &   &   &   & * & * & * & * \\ \hline
+11 - \textbf{SGmultic}	&   &   &   &   &   & * & * & * & + &   & - &   & + & * &   &   & + & * & * & * & * \\
+12 - EERacu	&   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   &   & * & * & * & * \\ \hline
+13 - EERent	&   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   &   & * & * & * & * \\
+14 - TUmah	&   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   & * & * & * & * \\ \hline
+15 - \textbf{GATUeuc}	&   &   &   &   &   &   &   & + &   &   &   &   &   &   & - &   &   & * & * & * & * \\
+16 - \textbf{GATUman}	&   &   &   &   &   & * & . & * &   &   &   &   &   & + &   & - &   & * & * & * & * \\ \hline
+17 - \textbf{GATUmah}	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - & * & * & * & * \\
+18 - SVMLbal	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   &   \\ \hline
+19 - SVMLsim	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   &   \\
+20 - EMC  	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
+21 - QBC  	&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}
 \label{stratsALCKappaFriedVFDTRedux}
 \end{center}
 \end{table}
